--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.18.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
