--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
