--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "antd": "^5.18.3",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
@@ -18,6 +19,7 @@
     "react-bootstrap": "^2.10.3",
     "react-bootstrap-typeahead": "^6.2.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.9.0",
