--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "formik": "^2.4.2",
+    "framer-motion": "^12.12.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
