--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "devs": "^0.2.2",
     "formik": "^2.4.2",
     "framer-motion": "^12.12.1",
     "moment": "^2.29.4",
+    "per": "^2.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-bootstrap-typeahead": "^6.2.3",
